# bill-splitter

./: .gitignore  DEPLOYMENT_GUIDE.md  README.md  app.json  debug-heroku.sh  deploy-heroku.sh  deploy.sh  heroku.yml  netlify.toml  render.yaml  setup.py  wsgi.py
backend/: __init__.py  app.py  pyproject.toml  sample_db.json
frontend/: .env.production  .eslintrc.js  .npmrc  netlify-build-hook.sh  netlify-troubleshoot.sh  netlify.config.js  netlify.toml  package-lock.json  package.json
frontend/public/: api-test.html  index.html  manifest.json
frontend/src/: App.css  App.js  buildFix.js  index.js
