[tool.poetry]
name = "bill-splitter-backend"
version = "0.1.0"
description = "Backend for Bill Splitter App"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.2"
flask-cors = "^3.0.10"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
